# toy-lambda

./: .gitignore  LICENSE  lambda.bnfc  toy-lambda.cabal
app/: Main.hs
src/: DocLambda.txt  Lib.hs
