name:                toy-lambda
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mtn/toy-lambda#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Noronha
maintainer:          
copyright:           2017 Michael Noronha
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , AbsLambda
                     , ErrM
                     , LexLambda
                     , ParLambda
                     , PrintLambda
                     , SkelLambda
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5.1.1
  default-language:    Haskell2010

executable repl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , toy-lambda
                     , haskeline >= 0.7.3.1
  default-language:    Haskell2010

test-suite toy-lambda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , toy-lambda
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/toy-lambda
